2022-08-29T16:23:56Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2950101890
* notice: last 14d: unq all: 6 12
* notice: prev accum: outdated-unq outdated-all / unq all: 80 117 / 86 125
* notice: next accum: outdated-unq outdated-all / unq all: 80 117 / 89 129
* notice: prev exec diff / last date diff / accum: unq all: +3 +4 -0 -0 / +3 +4 -0 -0 / 3 4
* notice: removed / changed dates: [] / [2022-08-29]

2022-08-27T01:53:05Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2937590230
* notice: last 14d: unq all: 5 8
* notice: prev accum: outdated-unq outdated-all / unq all: 80 117 / 81 119
* notice: next accum: outdated-unq outdated-all / unq all: 80 117 / 86 125
* notice: prev exec diff / last date diff / accum: unq all: +5 +6 -0 -0 / +5 +6 -0 -0 / 5 6
* notice: removed / changed dates: [] / [2022-08-26]

2022-08-24T01:51:45Z:
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 76 112 / 78 115
* notice: next accum: outdated-unq outdated-all / unq all: 80 117 / 81 119
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-09] / []

2022-08-23T16:23:15Z:
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 76 112 / 81 119
* notice: next accum: outdated-unq outdated-all / unq all: 76 112 / 78 115
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -3 -4 / +4 +5 -3 -4 / 1 1
* notice: removed / changed dates: [] / [2022-08-09]

2022-08-18T08:20:55Z:
* notice: last 14d: unq all: 5 7
* notice: prev accum: outdated-unq outdated-all / unq all: 76 112 / 80 117
* notice: next accum: outdated-unq outdated-all / unq all: 76 112 / 81 119
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-08-18]

2022-08-18T01:53:06Z: