@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-29T16:23:56Z",
-  "count" : 4,
-  "count_minmax" : [ 4, 4 ],
-  "count_decinc" : [ -0, +4 ],
-  "uniques" : 3,
-  "uniques_minmax" : [ 3, 3 ],
-  "uniques_decinc" : [ -0, +3 ]
+  "timestamp" : "2022-08-30T02:06:28Z",
+  "count" : 8,
+  "count_minmax" : [ 4, 8 ],
+  "count_decinc" : [ -0, +8 ],
+  "uniques" : 4,
+  "uniques_minmax" : [ 3, 4 ],
+  "uniques_decinc" : [ -0, +4 ]
 }
