@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-29T16:23:56Z",
+  "timestamp" : "2022-08-30T02:06:28Z",
   "count_outdated" : 117,
   "uniques_outdated" : 80,
-  "count" : 129,
-  "uniques" : 89,
+  "count" : 133,
+  "uniques" : 90,
   "clones" : [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -21,10 +21,10 @@
     },
     {
       "timestamp": "2022-08-29T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ]
+      "count": 8,
+      "count_minmax": [ 4, 8 ],
+      "uniques": 4,
+      "uniques_minmax": [ 3, 4 ]
     }
   ]
 }
