@@ -1,6 +1,6 @@
 {
-  "count": 12,
-  "uniques": 6,
+  "count": 16,
+  "uniques": 7,
   "clones": [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -14,8 +14,8 @@
     },
     {
       "timestamp": "2022-08-29T00:00:00Z",
-      "count": 4,
-      "uniques": 3
+      "count": 8,
+      "uniques": 4
     }
   ]
 }
