@@ -1,3 +1,11 @@
+2022-08-30T02:06:28Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2953049020
+* notice: last 14d: unq all: 7 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 80 117 / 89 129
+* notice: next accum: outdated-unq outdated-all / unq all: 80 117 / 90 133
+* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +4 +8 -0 -0 / 4 8
+* notice: removed / changed dates: [] / [2022-08-29]
+
 2022-08-29T16:23:56Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2950101890
 * notice: last 14d: unq all: 6 12
